[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tabs/LangGen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Tabs/ItemModelGen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tabs/BlockStuffGen.tscn" type="PackedScene" id=4]
[ext_resource path="res://ClassTemplateMaker.gd" type="Script" id=5]
[ext_resource path="res://Errors.gd" type="Script" id=6]
[ext_resource path="res://DroidSans.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Buttons/EditButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Tabs/Directory.tscn" type="PackedScene" id=9]
[ext_resource path="res://ModeButton.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 13
extra_spacing_top = -5
extra_spacing_bottom = -5
extra_spacing_space = 1
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.239216, 0.227451, 0.270588, 1 )

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 500 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModIdLab" type="Label" parent="."]
anchor_left = 0.004
anchor_top = 0.0346667
anchor_right = 0.137242
anchor_bottom = 0.038
margin_left = -0.0960002
margin_top = -13.8
margin_right = 0.463997
margin_bottom = 0.199999
text = "MOD_ID:"
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ModId" type="LineEdit" parent="."]
anchor_left = 0.009
anchor_top = 0.042
anchor_right = 0.132
anchor_bottom = 0.082
margin_left = -0.216001
margin_top = -0.200003
margin_right = -0.167999
margin_bottom = -0.200001
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveModId" type="Button" parent="."]
anchor_left = 0.008
anchor_top = 0.092
anchor_right = 0.132
anchor_bottom = 0.135
margin_left = -0.192
margin_top = -0.200005
margin_right = -0.167999
text = "Save MOD_ID"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorsLab" type="Label" parent="."]
anchor_left = 0.005
anchor_top = 0.17
anchor_right = 0.139
anchor_bottom = 0.17
margin_left = -0.12
margin_top = -14.0
margin_right = -0.336014
text = "ERRORS:"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Errors" type="TextEdit" parent="."]
anchor_left = 0.003
anchor_top = 0.172
anchor_right = 0.142
anchor_bottom = 0.992
margin_left = -0.072
margin_top = -0.200005
margin_right = -0.408005
margin_bottom = -39.2
custom_fonts/font = SubResource( 1 )
custom_colors/member_variable_color = Color( 1, 0, 0, 1 )
custom_colors/code_folding_color = Color( 1, 0, 0, 1 )
custom_colors/function_color = Color( 1, 0, 0, 1 )
custom_colors/safe_line_number_color = Color( 1, 0, 0, 1 )
custom_colors/symbol_color = Color( 1, 0, 0, 1 )
custom_colors/caret_background_color = Color( 1, 0, 0, 1 )
custom_colors/bookmark_color = Color( 1, 0, 0, 1 )
custom_colors/selection_color = Color( 1, 0, 0, 1 )
custom_colors/caret_color = Color( 1, 0, 0, 1 )
custom_colors/breakpoint_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/line_number_color = Color( 1, 0, 0, 1 )
custom_colors/completion_font_color = Color( 1, 0, 0, 1 )
custom_colors/completion_scroll_color = Color( 1, 0, 0, 1 )
custom_colors/background_color = Color( 1, 0, 0, 1 )
custom_colors/number_color = Color( 1, 0, 0, 1 )
custom_colors/completion_background_color = Color( 1, 0, 0, 1 )
custom_colors/brace_mismatch_color = Color( 1, 0, 0, 1 )
custom_colors/current_line_color = Color( 1, 0, 0, 1 )
custom_colors/completion_selected_color = Color( 1, 0, 0, 1 )
custom_colors/executing_line_color = Color( 1, 0, 0, 1 )
custom_colors/mark_color = Color( 1, 0.0431373, 0.0431373, 1 )
custom_colors/word_highlighted_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 0.878431, 0, 0, 1 )
custom_colors/completion_existing_color = Color( 1, 0, 0, 1 )
readonly = true
wrap_enabled = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearErrors" type="Button" parent="."]
anchor_left = 0.008
anchor_top = 0.935
anchor_right = 0.132
anchor_bottom = 0.978
margin_left = -0.192
margin_top = -6.10352e-05
margin_right = -0.167999
margin_bottom = 0.199951
text = "Clear"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.146
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.504013
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Directory" parent="TabContainer" instance=ExtResource( 9 )]

[node name="ItemModelGen" parent="TabContainer" instance=ExtResource( 3 )]
visible = false

[node name="LangGen" parent="TabContainer" instance=ExtResource( 1 )]
visible = false

[node name="BlockStuffGen" parent="TabContainer" instance=ExtResource( 4 )]
visible = false
margin_right = -4.0

[node name="ClassTemplateMaker" type="Control" parent="."]
anchor_left = 0.144
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.456009
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ClassTemplateMaker"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassResult" type="TextEdit" parent="ClassTemplateMaker"]
anchor_left = 0.076416
anchor_top = 0.179667
anchor_right = 0.922485
anchor_bottom = 0.918667
margin_left = -0.250008
margin_top = 0.199997
margin_right = 0.375
margin_bottom = -0.200012
readonly = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EditButton" parent="ClassTemplateMaker" instance=ExtResource( 8 )]
anchor_left = 0.0718716
anchor_top = 0.926772
anchor_right = 0.252872
anchor_bottom = 0.997772
margin_left = -0.0147324
margin_top = 0.150757
margin_right = 0.0582581
margin_bottom = 0.10675

[node name="SaveClassAs" type="Button" parent="ClassTemplateMaker"]
anchor_left = 0.798393
anchor_top = 0.935835
anchor_right = 0.922393
anchor_bottom = 0.978835
margin_left = 0.25
margin_top = -0.200012
margin_right = 0.274048
text = "Save In"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveClass" type="Button" parent="ClassTemplateMaker"]
anchor_left = 0.629534
anchor_top = 0.934405
anchor_right = 0.753534
anchor_bottom = 0.977405
margin_left = 0.25
margin_top = -0.200012
margin_right = 0.274048
text = "Save"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GenerateClass" type="Button" parent="ClassTemplateMaker"]
anchor_left = 0.656499
anchor_top = 0.0836667
anchor_right = 0.861717
anchor_bottom = 0.165
margin_left = 0.25
margin_top = -0.200012
margin_right = 0.274048
text = "Generate Template Class"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ClassName" type="LineEdit" parent="ClassTemplateMaker"]
anchor_left = 0.078
anchor_top = 0.133667
anchor_right = 0.203
anchor_bottom = 0.173667
margin_left = -0.204582
margin_top = -0.200005
margin_right = -0.20459
margin_bottom = -0.200005
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ClassNameLab" type="Label" parent="ClassTemplateMaker"]
anchor_left = 0.0773638
anchor_top = 0.128667
anchor_right = 0.207288
anchor_bottom = 0.128667
margin_left = 0.151993
margin_top = -14.2
margin_right = 0.207993
margin_bottom = -0.200001
text = "Class Name :"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="ClassTemplateMaker"]
anchor_left = 0.270066
anchor_top = 0.0403333
anchor_right = 0.737505
anchor_bottom = 0.0403333
margin_left = 0.151993
margin_top = -14.2
margin_right = 0.207993
margin_bottom = -0.200001
custom_colors/font_color = Color( 0.605469, 0.605469, 0.605469, 1 )
text = "Class Template Generator"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ObjectTypeLab" type="Label" parent="ClassTemplateMaker"]
anchor_left = 0.211865
anchor_top = 0.108
anchor_right = 0.326966
anchor_bottom = 0.108
margin_left = 0.194641
margin_top = -13.8
margin_right = 0.250641
margin_bottom = 0.199997
grow_horizontal = 0
text = "Object Type:"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TemplateLab" type="Label" parent="ClassTemplateMaker"]
anchor_left = 0.211865
anchor_top = 0.165333
anchor_right = 0.326966
anchor_bottom = 0.165333
margin_left = 0.194641
margin_top = -14.2
margin_right = 0.250641
margin_bottom = -0.200005
grow_horizontal = 0
text = "Template :"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ClassMode" type="OptionButton" parent="ClassTemplateMaker"]
anchor_left = 0.344
anchor_top = 0.0966667
anchor_right = 0.588414
anchor_bottom = 0.0966667
margin_left = -0.256012
margin_top = -10.0
margin_right = 0.463989
margin_bottom = 10.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}
type = 0

[node name="Template" type="OptionButton" parent="ClassTemplateMaker"]
anchor_left = 0.344
anchor_top = 0.153334
anchor_right = 0.588414
anchor_bottom = 0.153334
margin_left = -0.256012
margin_top = -10.0
margin_right = 0.463989
margin_bottom = 10.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}
type = 2

[node name="SaveClassDialog" type="FileDialog" parent="ClassTemplateMaker"]
anchor_left = 0.113
anchor_top = 0.072
anchor_right = 0.884
anchor_bottom = 0.975
margin_left = 0.206757
margin_top = 0.0610161
margin_right = -0.297241
margin_bottom = 0.260986
window_title = "Open a Directory"
mode = 2
access = 2
filters = PoolStringArray( "*.java ; Classe" )
show_hidden_files = true
current_dir = "/user/Wibi/Documents/Godot/MinecraftTextgen"
current_path = "/user/Wibi/Documents/Godot/MinecraftTextgen/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="ClassTemplateMaker"]
anchor_left = 0.94486
anchor_top = 0.023
anchor_right = 0.98186
anchor_bottom = 0.077
margin_left = 0.357971
margin_top = 0.200001
margin_right = -0.0910645
margin_bottom = -0.200005
text = "X"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChooseDir" type="FileDialog" parent="."]
margin_left = 166.0
margin_top = 136.0
margin_right = 1013.0
margin_bottom = 594.0
window_title = "Open a Directory"
mode = 2
access = 2
show_hidden_files = true
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseJavaDir" type="FileDialog" parent="."]
margin_left = 166.0
margin_top = 136.0
margin_right = 1013.0
margin_bottom = 594.0
window_title = "Open a Directory"
mode = 2
access = 2
show_hidden_files = true
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SaveModId" to="." method="_on_SaveModId_pressed"]
[connection signal="pressed" from="ClearErrors" to="." method="_on_ClearErrors_pressed"]
[connection signal="open_dir_button_pressed" from="TabContainer/Directory" to="." method="_on_Directory_open_dir_button_pressed"]
[connection signal="toggled" from="ClassTemplateMaker/EditButton" to="ClassTemplateMaker" method="_on_EditButton_toggled"]
[connection signal="pressed" from="ClassTemplateMaker/SaveClassAs" to="ClassTemplateMaker" method="_on_SaveClassAs_pressed"]
[connection signal="pressed" from="ClassTemplateMaker/SaveClass" to="ClassTemplateMaker" method="_on_SaveClass_pressed"]
[connection signal="pressed" from="ClassTemplateMaker/GenerateClass" to="ClassTemplateMaker" method="_on_GenerateClass_pressed"]
[connection signal="text_changed" from="ClassTemplateMaker/ClassName" to="ClassTemplateMaker" method="_on_ClassName_text_changed"]
[connection signal="item_selected" from="ClassTemplateMaker/ClassMode" to="ClassTemplateMaker" method="_on_ClassMode_item_selected"]
[connection signal="item_selected" from="ClassTemplateMaker/Template" to="ClassTemplateMaker" method="_on_Template_item_selected"]
[connection signal="dir_selected" from="ClassTemplateMaker/SaveClassDialog" to="ClassTemplateMaker" method="_on_SaveClassDialog_dir_selected"]
[connection signal="pressed" from="ClassTemplateMaker/CloseButton" to="ClassTemplateMaker" method="_on_CloseButton_pressed"]
[connection signal="dir_selected" from="ChooseDir" to="." method="_on_ChooseDir_dir_selected"]
[connection signal="dir_selected" from="ChooseJavaDir" to="." method="_on_ChooseJavaDir_dir_selected"]
